--- a/Assets/VRKeyboard/package.json
+++ b/Assets/VRKeyboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.omega.vrkeyboard",
+  "name": "com.max-fluff.vrkeyboard",
   "version": "1.0.0",
   "displayName": "VR Keyboard",
   "description": "Custom Keyboard",
