--- a/.github/workflows/package-updater.yml
+++ b/.github/workflows/package-updater.yml
@@ -5,6 +5,6 @@ on:
       - master
 jobs:
   update-package:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     steps:
       - run: git subtree push --prefix Assets/VRKeyboard-package origin upm
