--- a/.github/workflows/package-updater.yml
+++ b/.github/workflows/package-updater.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   update-package:
-    runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2.1.0
       - run: git subtree push --prefix Assets/VRKeyboard-package origin upm
