--- a/.github/workflows/package-updater.yml
+++ b/.github/workflows/package-updater.yml
@@ -8,4 +8,7 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2.1.0
-      - run: git subtree push --prefix Assets/VRKeyboard-package origin upm --force
+      - run: | 
+          git subtree split --prefix Assets/VRKeyboard-package -b upm
+          git push -f origin upm:upm
+          git branch -D upm
